<resources>
    <string name="app_name">Demoapp</string>
    <string name="welcome_to_splash_screen">welcome to splash screen</string>
    <string name="welcome_login">welcome to login activity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome_to_signup_activity">welcome to signup activity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">last Name</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Your Password</string>
    <string name="confirm_paswrd">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_to_home_activity">welcome to home activity</string>
    <string name="logout">logout</string>
    <string name="home_activity">Home activity</string>
    <string name="about">about</string>
    <string name="title_activity_drawer">drawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="already_account">Already have an account?Login</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
</resources>
