<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    android:id="@+id/ConstraintLayoutLogin"
    tools:context=".activities.LoginScreenActivity">

    <TextView
        android:id="@+id/txtv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_login"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"/>

    <TextView
        android:id="@+id/txtv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/enter_your_email"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtv_welcome"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinputlayoutemail"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/txtv_username"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/txtv_username"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittxt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@drawable/drawable_rectanglewhite_radius25"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtv_pswrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/txtinputlayoutemail"
        app:layout_constraintStart_toStartOf="@id/txtinputlayoutemail"
        android:text="@string/enter_password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayoutpaswrd"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/txtv_pswrd"
        app:layout_constraintStart_toStartOf="@id/txtv_pswrd"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edittext_pswd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:background="@drawable/drawable_rectanglewhite_radius25"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/drawable_sectanglebtn_radius2"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
       app:layout_constraintStart_toStartOf="@id/textinputlayoutpaswrd"
        app:layout_constraintTop_toBottomOf="@id/txtv_forgtpswd"/>

    <TextView
        android:id="@+id/txtv_forgtpswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/textinputlayoutpaswrd"
        app:layout_constraintStart_toStartOf="@id/textinputlayoutpaswrd"
        app:layout_constraintTop_toBottomOf="@id/textinputlayoutpaswrd"
        app:layout_constraintBottom_toTopOf="@id/login_btn" />




</androidx.constraintlayout.widget.ConstraintLayout>