<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ConstraintLayoutSignup"
    android:background="@drawable/gradient_1"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:id="@+id/iv_backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_backbutton"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>
    <TextView
        android:id="@+id/txtv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_signup_activity"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_backbtn"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"/>
    <TextView
        android:id="@+id/txtv_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintTop_toBottomOf="@id/txtv_welcome"
        android:layout_marginTop="28dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:id="@+id/text_input_layout_firstname"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/txtv_firstname"
        app:layout_constraintTop_toBottomOf="@id/txtv_firstname">

        <EditText
            android:id="@+id/editText_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_first_name"
            android:background="@drawable/drawable_rectanglewhite_radius25"
            android:backgroundTint="@color/colorWhite"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@id/signupBtn"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/txtv_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_firstname"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/text_input_layout_firstname"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_layout_lastname"
        app:layout_constraintTop_toBottomOf="@id/txtv_lastname"
        app:layout_constraintStart_toStartOf="@id/txtv_lastname">

        <EditText
            android:id="@+id/editText_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="Enter Your last Name"
            android:background="@drawable/drawable_rectanglewhite_radius25"
            android:backgroundTint="@color/colorWhite"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txtv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_lastname"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/text_input_layout_lastname"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtv_email"
        app:layout_constraintStart_toStartOf="@id/txtv_email"
        android:id="@+id/text_input_layout_email">

        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/colorWhite"
            android:layout_marginTop="8dp"
            android:hint="Enter Your Email"
            android:background="@drawable/drawable_rectanglewhite_radius25"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txtv_paswrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_email"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/text_input_layout_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_layout_password"
        app:layout_constraintTop_toBottomOf="@id/txtv_paswrd"
        app:layout_constraintStart_toStartOf="@id/txtv_paswrd">
        <EditText
            android:id="@+id/editText_Paswrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/drawable_rectanglewhite_radius25"
            android:hint="@string/password"
            android:backgroundTint="@color/colorWhite"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txtv_confirmpaswrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_paswrd"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_password"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/text_input_layout_password"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_input_layout_confirmpaswd"
        app:layout_constraintTop_toBottomOf="@id/txtv_confirmpaswrd"
        app:layout_constraintStart_toStartOf="@id/txtv_confirmpaswrd">

        <EditText
            android:id="@+id/editText_confirmPaswrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/drawable_rectanglewhite_radius25"
            android:hint="@string/password"
            android:backgroundTint="@color/colorWhite"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/signupBtn"
            android:textColor="@color/colorWhite" />

    </com.google.android.material.textfield.TextInputLayout>



<Button
    android:id="@+id/signupBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/drawable_sectanglebtn_radius2"
    android:text="@string/sign_up"
    android:textColor="@color/colorWhite"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@id/text_input_layout_confirmpaswd"
    app:layout_constraintStart_toStartOf="@id/guidelineStart"
    app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
    android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/txtv_alreadyaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_account"
        android:textSize="12sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/signupBtn"
        app:layout_constraintStart_toStartOf="@id/signupBtn"
        app:layout_constraintEnd_toEndOf="@id/signupBtn"
        android:layout_marginTop="12dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>