<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="12dp"
    android:layout_height="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txtv_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txtv_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintTop_toBottomOf="@id/txtv_firstname"
        app:layout_constraintStart_toStartOf="@id/txtv_firstname"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/txtv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/txtv_lastname"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/txtv_lastname"/>
    <TextView
        android:id="@+id/txtv_paswrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/txtv_email"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="@id/txtv_email"/>
    <TextView
        android:id="@+id/txtv_firstnamelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/txtv_firstname"
        android:text="@string/first_name"
        app:layout_constraintStart_toEndOf="@id/txtv_firstname"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"/>
    <TextView
        android:id="@+id/txtv_lastnamelist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtv_firstnamelist"
        android:text="@string/last_name"
        app:layout_constraintStart_toStartOf="@id/txtv_firstnamelist"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/txtv_emailList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtv_lastnamelist"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/txtv_lastnamelist"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/txtv_paswrdlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtv_emailList"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/txtv_emailList"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>